tinygrad_repo/extra/qcom_gpu_driver/msm_kgsl.py


struct_kgsl_gpuobj_info._pack_ = 1 # source:False
struct_kgsl_gpuobj_info._fields_ = [
    ('gpuaddr', ctypes.c_uint64),
    ('flags', ctypes.c_uint64),
    ('size', ctypes.c_uint64),
    ('va_len', ctypes.c_uint64),
    ('va_addr', ctypes.c_uint64),
    ('id', ctypes.c_uint32),
    ('PADDING_0', ctypes.c_ubyte * 4),
]

class struct_kgsl_gpuobj_import(Structure):
    pass

struct_kgsl_gpuobj_import._pack_ = 1 # source:False
struct_kgsl_gpuobj_import._fields_ = [
    ('priv', ctypes.c_uint64),
    ('priv_len', ctypes.c_uint64),
    ('flags', ctypes.c_uint64),
    ('type', ctypes.c_uint32),
    ('id', ctypes.c_uint32),
]

class struct_kgsl_gpuobj_import_dma_buf(Structure):
    pass

struct_kgsl_gpuobj_import_dma_buf._pack_ = 1 # source:False
struct_kgsl_gpuobj_import_dma_buf._fields_ = [
    ('fd', ctypes.c_int32),
]

class struct_kgsl_gpuobj_import_useraddr(Structure):
    pass

struct_kgsl_gpuobj_import_useraddr._pack_ = 1 # source:False
struct_kgsl_gpuobj_import_useraddr._fields_ = [
    ('virtaddr', ctypes.c_uint64),
]

class struct_kgsl_gpuobj_sync_obj(Structure):
    pass

struct_kgsl_gpuobj_sync_obj._pack_ = 1 # source:False
struct_kgsl_gpuobj_sync_obj._fields_ = [
    ('offset', ctypes.c_uint64),
    ('length', ctypes.c_uint64),
    ('id', ctypes.c_uint32),
    ('op', ctypes.c_uint32),
]

class struct_kgsl_gpuobj_sync(Structure):
    pass

struct_kgsl_gpuobj_sync._pack_ = 1 # source:False
struct_kgsl_gpuobj_sync._fields_ = [
    ('objs', ctypes.c_uint64),
    ('obj_len', ctypes.c_uint32),
    ('count', ctypes.c_uint32),
]

class struct_kgsl_command_object(Structure):
    pass

struct_kgsl_command_object._pack_ = 1 # source:False
struct_kgsl_command_object._fields_ = [
    ('offset', ctypes.c_uint64),
    ('gpuaddr', ctypes.c_uint64),
    ('size', ctypes.c_uint64),
    ('flags', ctypes.c_uint32),
    ('id', ctypes.c_uint32),
]

class struct_kgsl_command_syncpoint(Structure):
    pass

struct_kgsl_command_syncpoint._pack_ = 1 # source:False
struct_kgsl_command_syncpoint._fields_ = [
    ('priv', ctypes.c_uint64),
    ('size', ctypes.c_uint64),
    ('type', ctypes.c_uint32),
    ('PADDING_0', ctypes.c_ubyte * 4),
]

class struct_kgsl_gpu_command(Structure):
    pass

struct_kgsl_gpu_command._pack_ = 1 # source:False
struct_kgsl_gpu_command._fields_ = [
    ('flags', ctypes.c_uint64),
    ('cmdlist', ctypes.c_uint64),
    ('cmdsize', ctypes.c_uint32),
    ('numcmds', ctypes.c_uint32),
    ('objlist', ctypes.c_uint64),
    ('objsize', ctypes.c_uint32),
    ('numobjs', ctypes.c_uint32),
    ('synclist', ctypes.c_uint64),
    ('syncsize', ctypes.c_uint32),
    ('numsyncs', ctypes.c_uint32),
    ('context_id', ctypes.c_uint32),
    ('timestamp', ctypes.c_uint32),
]

class struct_kgsl_preemption_counters_query(Structure):
    pass

struct_kgsl_preemption_counters_query._pack_ = 1 # source:False
struct_kgsl_preemption_counters_query._fields_ = [
    ('counters', ctypes.c_uint64),
    ('size_user', ctypes.c_uint32),
    ('size_priority_level', ctypes.c_uint32),
    ('max_priority_level', ctypes.c_uint32),
    ('PADDING_0', ctypes.c_ubyte * 4),
]

class struct_kgsl_gpuobj_set_info(Structure):
    pass

struct_kgsl_gpuobj_set_info._pack_ = 1 # source:False
struct_kgsl_gpuobj_set_info._fields_ = [
    ('flags', ctypes.c_uint64),
    ('metadata', ctypes.c_uint64),
    ('id', ctypes.c_uint32),
    ('metadata_len', ctypes.c_uint32),
    ('type', ctypes.c_uint32),
    ('PADDING_0', ctypes.c_ubyte * 4),
]

__all__ = \
    ['KGSL_CMDWINDOW_2D', 'KGSL_CMDWINDOW_3D',
    'KGSL_CMDWINDOW_ARBITER', 'KGSL_CMDWINDOW_MAX',
    'KGSL_CMDWINDOW_MIN', 'KGSL_CMDWINDOW_MMU',
    'KGSL_CTX_STAT_GUILTY_CONTEXT_RESET_EXT',
    'KGSL_CTX_STAT_INNOCENT_CONTEXT_RESET_EXT',
    'KGSL_CTX_STAT_NO_ERROR',
    'KGSL_CTX_STAT_UNKNOWN_CONTEXT_RESET_EXT', 'KGSL_DEVICE_3D0',
    'KGSL_DEVICE_MAX', 'KGSL_TIMESTAMP_CONSUMED',
    'KGSL_TIMESTAMP_QUEUED', 'KGSL_TIMESTAMP_RETIRED',
    'KGSL_USER_MEM_TYPE_ADDR', 'KGSL_USER_MEM_TYPE_ASHMEM',
    'KGSL_USER_MEM_TYPE_DMABUF', 'KGSL_USER_MEM_TYPE_ION',
    'KGSL_USER_MEM_TYPE_MAX', 'KGSL_USER_MEM_TYPE_PMEM',
    'kgsl_cmdwindow_type', 'kgsl_ctx_reset_stat', 'kgsl_deviceid',
    'kgsl_timestamp_type', 'kgsl_user_mem_type',
    'struct_kgsl_bind_gmem_shadow', 'struct_kgsl_buffer_desc',
    'struct_kgsl_cff_sync_gpuobj', 'struct_kgsl_cff_syncmem',
    'struct_kgsl_cff_user_event', 'struct_kgsl_cmd_syncpoint',
    'struct_kgsl_cmd_syncpoint_fence',
    'struct_kgsl_cmd_syncpoint_timestamp',
    'struct_kgsl_cmdbatch_profiling_buffer',
    'struct_kgsl_cmdstream_freememontimestamp',
    'struct_kgsl_cmdstream_freememontimestamp_ctxtid',
    'struct_kgsl_cmdstream_readtimestamp',
    'struct_kgsl_cmdstream_readtimestamp_ctxtid',
    'struct_kgsl_cmdwindow_write', 'struct_kgsl_command_object',
    'struct_kgsl_command_syncpoint', 'struct_kgsl_device_constraint',
    'struct_kgsl_device_constraint_pwrlevel',
    'struct_kgsl_device_getproperty',
    'struct_kgsl_device_waittimestamp',
    'struct_kgsl_device_waittimestamp_ctxtid', 'struct_kgsl_devinfo',
    'struct_kgsl_devmemstore', 'struct_kgsl_drawctxt_create',
    'struct_kgsl_drawctxt_destroy',
    'struct_kgsl_drawctxt_set_bin_base_offset',
    'struct_kgsl_gmem_desc', 'struct_kgsl_gpmu_version',
    'struct_kgsl_gpu_command', 'struct_kgsl_gpu_event_fence',
    'struct_kgsl_gpu_event_timestamp', 'struct_kgsl_gpumem_alloc',
    'struct_kgsl_gpumem_alloc_id', 'struct_kgsl_gpumem_free_id',
    'struct_kgsl_gpumem_get_info', 'struct_kgsl_gpumem_sync_cache',
    'struct_kgsl_gpumem_sync_cache_bulk', 'struct_kgsl_gpuobj_alloc',
    'struct_kgsl_gpuobj_free', 'struct_kgsl_gpuobj_import',
    'struct_kgsl_gpuobj_import_dma_buf',
    'struct_kgsl_gpuobj_import_useraddr', 'struct_kgsl_gpuobj_info',
    'struct_kgsl_gpuobj_set_info', 'struct_kgsl_gpuobj_sync',
    'struct_kgsl_gpuobj_sync_obj', 'struct_kgsl_ibdesc',
    'struct_kgsl_map_user_mem', 'struct_kgsl_perfcounter_get',
    'struct_kgsl_perfcounter_put', 'struct_kgsl_perfcounter_query',
    'struct_kgsl_perfcounter_read',
    'struct_kgsl_perfcounter_read_group',
    'struct_kgsl_preemption_counters_query',
    'struct_kgsl_ringbuffer_issueibcmds', 'struct_kgsl_shadowprop',
    'struct_kgsl_sharedmem_free', 'struct_kgsl_sharedmem_from_pmem',
    'struct_kgsl_sharedmem_from_vmalloc',
    'struct_kgsl_sp_generic_mem', 'struct_kgsl_submit_commands',
    'struct_kgsl_syncsource_create',
    'struct_kgsl_syncsource_create_fence',
    'struct_kgsl_syncsource_destroy',
    'struct_kgsl_syncsource_signal_fence',
    'struct_kgsl_timestamp_event',
    'struct_kgsl_timestamp_event_fence',
    'struct_kgsl_timestamp_event_genlock',
    'struct_kgsl_ucode_version', 'struct_kgsl_version']
